tests/should_succeed/unicode_varname.jou
import "stdlib/io.jou"

def füncŧiøn() -> None:
    yrjö = 1
    örkkiläinen = 2
    printf("%d\n", yrjö + örkkiläinen)  # Output: 3

def main() -> int:
    füncŧiøn()
    return 0
