tests/syntax_error/keyword_int16.jou
def main() -> int:
    int16 = 1  # Error: expected an expression, got the 'int16' keyword
    return 0
